--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    color: #333333;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    color: #333;
+    line-height: 1.6;
     margin: 0;
 }
 
@@ -10,7 +11,12 @@ body {
 *::after {
     box-sizing: border-box;
 }
-h1, h2, h3, h4{
+
+h1,
+h2,
+h3,
+h4,
+h5 {
     margin: 0;
 }
 
@@ -20,38 +26,314 @@ h1, h2, h3, h4{
     margin: 0 auto;
 }
 
-/* header-container */
-nav a{
-    text-transform: uppercase;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    color:white;
-    text-decoration: none;
-}
 
-/* intro */
-.intro {
-    height: 100vh;
-    width: 100%;
-    background: url("../assets/img/header.jpg") center no-repeat;
-    background-size: cover ;
-}
 /* header */
-.header{
+
+.header {
+    padding-top: 30px;
     width: 100%;
     position: absolute;
     top: 0;
     right: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 100;
 }
 
-.header_logo{
+.header-inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header_logo {
     font-size: 30px;
-    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     color: white;
 }
 
+.nav {
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.nav-link {
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    font-weight: 700;
+    color: white;
+    text-decoration: none;
+    transition: color 0.2s linear;
+    margin: 0 10px;
+}
+
+.nav-link::after {
+    content: "";
+    opacity: 0;
+    width: 100%;
+    height: 3px;
+    background-color: yellow;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+    transition: opacity 0.2s linear;
+}
+
+.nav-link:hover {
+    color: yellow;
+}
+
+.nav-link:hover::after {
+    opacity: 1;
+}
+
+/* intro */
+.intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+    background: url("../img/intro/header.jpg") center no-repeat;
+    background-size: cover;
+}
+
+.intro-inner {
+    max-width: 880px;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.intro-sup {
+    font-size: 72px;
+    color: white;
+    font-weight: 100;
+    font-family: 'Kaushan Script', cursive;
+    margin-bottom: 20px;
+}
+
+.intro-header {
+
+    text-transform: uppercase;
+    color: white;
+    font-size: 150px;
+    font-weight: 700;
+    line-height: 1;
+}
+
+.intro-header::after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: white;
+    margin: 60px auto;
+}
+
+.intro-btn {
+    display: inline-block;
+    vertical-align: top;
+    border: 3px solid white;
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 700;
+    padding: 8px 30px;
+    transition: background 0.2s linear, color 0.2s linear;
+}
+
+.intro-btn:hover {
+    background-color: white;
+    color: yellow;
+}
+
+/*slider*/
+.slider {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.slider-inner {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.slider-item {
+    position: relative;
+    width: 23%;
+    padding: 20px 0;
+    font-size: 18px;
+    color: white;
+    text-transform: uppercase;
+    border-top: 3px solid white;
+    opacity: 0.7;
+}
+
+.slider-num {
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.slider-item.active {
+    opacity: 1;
+}
+
+.slider-item.active::before {
+    content: "";
+    display: block;
+    width: 70px;
+    height: 3px;
+    position: absolute;
+    top: -3px;
+    left: 0;
+    z-index: 1;
+    background-color: rgb(243, 129, 129);
+}
 
 
+/*section*/
+.section {
+    padding: 80px 0;
+}
+
+.section-header {
+    width: 100%;
+    max-width: 950px;
+    text-align: center;
+    margin: 0 auto 40px;
+}
+
+.section-suptitle {
+    font-size: 24px;
+    color: black;
+    font-weight: 400;
+    font-family: 'Kaushan Script', cursive;
+}
+
+.section-title {
+    text-transform: uppercase;
+    font-size: 30px;
+    color: black;
+    font-weight: 700;
+}
+
+.section-title::after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: black;
+    margin: 30px auto;
+}
+
+.section-text {
+    /* max-width: 950px; */
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+
+}
+
+.text {
+    color: black;
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+}
+
+.about {
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.about-item {
+    width: 380px;
+    background-color: #95e1d3;
+    position: relative;
+}
+
+.about-item:hover .about-img {
+    transform: translate3d(-10px, -10px, 0);
+}
+
+.about-item:hover .about-img img {
+    opacity: 0.1;
+
+}
+
+.about-item:hover .about-text {
+    opacity: 1;
+}
+
+.about-img {
+    background: linear-gradient(to bottom, #f38181, #fce38a);
+    transition: opacity 0.2s linear;
+}
+
+.about-img img {
+    display: block;
+    transition: opacity 0.1s linear;
+}
+
+.about-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 0;
+    width: 100%;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 18px;
+    text-align: center;
+    position: absolute;
+    top: 35%;
+    left: 0;
+    z-index: 2;
+    transition: opacity 0.1s linear;
+    transform: translate3d(0, -50%. 0);
+
+}
+
+/*statistics*/
+.statistics {
+    background: #95e1d3;
+}
+
+.stat {
+    display: flex;
+}
+
+.stat-item {
+    padding: 70px 25px;
+    flex: 1 1 0;
+    border-left: 2px solid #b5eae0;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    color: white;
+}
+
+.stat-item:last-child {
+    border-right: 2px solid #b5eae0;
+}
+
+.stat-num{
+    margin-bottom: 10px;
+    font-size: 72px;
+    font-weight: 700;
+    line-height: 1;
+}
+
+.stat-text{
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 400;
+}
