--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,16 @@ h5 {
     margin: 0;
 }
 
+
+hr{
+    display: block;
+    height: 1px;
+    width: 100%;
+    border: 0;
+    background-color: #e5e5e5;   
+    margin: 40px 0;
+}
+
 .container {
     width: 100%;
     max-width: 1200px;
@@ -207,7 +217,7 @@ h5 {
     width: 100%;
     max-width: 950px;
     text-align: center;
-    margin: 0 auto 40px;
+    margin: 0 auto 50px;
 }
 
 .section-suptitle {
@@ -337,3 +347,62 @@ h5 {
     text-transform: uppercase;
     font-weight: 400;
 }
+
+
+/*services*/
+.services{
+    display: flex;
+}
+
+.services-item{
+    flex: 1 1 0;
+    padding-left: 90px;
+    padding-right: 20px;
+    position: relative;
+}
+.services-title{
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.services-text{
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.services-icon{
+    position: absolute;
+    top:0;
+    left: 30px;
+    z-index: 1;
+}
+
+/*section devices*/
+.section--devices{
+    background: url("../img/devices/background.png") center no-repeat;
+    background-size: cover;
+    
+}
+
+.devices{
+    max-width: 600px;
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+}
+
+.devices-item{
+    display: block;
+}
+
+.devices-item--iphone{
+    position: absolute;
+    right: 0;
+    bottom: -90px;
+z-index: 1;
+
+}
+    
