--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,12 @@ h5 {
 }
 
 
-hr{
+hr {
     display: block;
     height: 1px;
     width: 100%;
     border: 0;
-    background-color: #e5e5e5;   
+    background-color: #e5e5e5;
     margin: 40px 0;
 }
 
@@ -335,14 +335,14 @@ hr{
     border-right: 2px solid #b5eae0;
 }
 
-.stat-num{
+.stat-num {
     margin-bottom: 10px;
     font-size: 72px;
     font-weight: 700;
     line-height: 1;
 }
 
-.stat-text{
+.stat-text {
     font-size: 14px;
     text-transform: uppercase;
     font-weight: 400;
@@ -350,59 +350,223 @@ hr{
 
 
 /*services*/
-.services{
+.services {
     display: flex;
 }
 
-.services-item{
+.services-item {
     flex: 1 1 0;
     padding-left: 90px;
     padding-right: 20px;
     position: relative;
 }
-.services-title{
+
+.services-title {
     font-size: 14px;
     font-weight: 700;
     text-transform: uppercase;
     margin-bottom: 10px;
 }
 
-.services-text{
+.services-text {
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
     font-weight: 400;
 }
 
-.services-icon{
+.services-icon {
     position: absolute;
-    top:0;
+    top: 0;
     left: 30px;
     z-index: 1;
 }
 
 /*section devices*/
-.section--devices{
+.section--devices {
     background: url("../img/devices/background.png") center no-repeat;
     background-size: cover;
-    
+    padding-bottom: 0;
+    margin-bottom: 40px;
 }
 
-.devices{
+.devices {
     max-width: 600px;
     width: 100%;
     margin: 0 auto;
     position: relative;
 }
 
-.devices-item{
+.devices-item {
     display: block;
 }
 
-.devices-item--iphone{
+.devices-item--iphone {
     position: absolute;
     right: 0;
     bottom: -90px;
-z-index: 1;
+    z-index: 1;
 
 }
+
+/*service*/
+.service {
+    display: flex;
+}
+
+.service-item {
+    flex: 1 1 0;
+
+}
+
+.accordion-item {
+    border: 1px solid #e5e5e5;
+    margin-bottom: 10px;
+}
+
+.accordion-item.active .accordion-content {
+    display: block;
+}
+
+.accordion-item.active .accordion-header {
+    border-bottom-color: #e5e5e5;
+}
+
+.accordion-item.active .accordion-header::after {
+    transform: translateY(-50%) rotate(-45deg);
+    margin-top: 5px;
+}
+
+
+.accordion-header {
+    padding: 15px 20px 15px 65px;
+    position: relative;
+    border-bottom: 1px solid transparent;
+    cursor: pointer;
+}
+
+.accordion-header::after {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-top: 2px solid #ccc;
+    border-right: 2px solid #ccc;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%) rotate(135deg);
+    z-index: 1;
+
+}
+
+.accordion-icon {
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    z-index: 1;
+
+    transform: translateY(-50%);
+}
+
+.accordion-title {
+    font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.accordion-content {
+    padding: 15px 20px;
+    display: none;
+
+}
+
+.accordion-content p {
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+    font-style: italic;
+    font-weight: 300;
+}
+
+/*section--grey*/
+.section--grey {
+    background-color: #f8f8f8;
+}
+
+.reviews {
+    padding: 110px;
+    position: relative;
+}
+
+.reviews-item {
+    padding-left: 205px;
+    position: relative;
+}
+
+.reviews__text {
+    font-size: 24px;
+    font-family: 'Roboto', sans-serif;
+    font-style: italic;
+    font-weight: 300;
+    color: #999999;
+    margin-bottom: 10px;
+}
+
+.reviews__photo {
+    max-width: 145px;
+    width: 100%;
+    height: 145px;
+    border: 2px solid #95e1d3;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.reviews__photo img {
+    margin: 40px;
+}
+
+.reviews__author {
+    font-family: 'Kaushan Script', cursive;
+    font-size: 24px;
+    color: #333;
+}
+
+.reviews__author::before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    width: 60px;
+    height: 3px;
+    background-color: #f38181;
+    margin-right: 10px;
+}
+
+.reviews-btn {
+    font-size: 0;
+    color: transparent;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.reviews-btn::after {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-top: 2px solid #ccc;
+    border-left: 2px solid #ccc;
+
     
+}
+
+.reviews-btn__prev{
+    left: 0;
+    transform: rotate(-45deg);
+}
+
+.reviews-btn__next{
+    right: 0;
+    transform: rotate(135deg);
+}
