--- a/css/style.css
+++ b/css/style.css
@@ -258,45 +258,46 @@ hr {
     font-weight: 400;
 }
 
-.about {
+.card {
     margin-top: 80px;
     display: flex;
     justify-content: space-between;
 }
 
-.about-item {
+.card-item {
     width: 380px;
+
+}
+
+.card-inner {
     background-color: #95e1d3;
     position: relative;
 }
 
-.about-item:hover .about-img {
+.card-inner:hover .card-img {
     transform: translate3d(-10px, -10px, 0);
 }
 
-.about-item:hover .about-img img {
+.card-inner:hover .card-img img {
     opacity: 0.1;
 
 }
 
-.about-item:hover .about-text {
+.card-inner:hover .card-text {
     opacity: 1;
 }
 
-.about-img {
+.card-img {
     background: linear-gradient(to bottom, #f38181, #fce38a);
     transition: opacity 0.2s linear;
 }
 
-.about-img img {
+.card-img img {
     display: block;
     transition: opacity 0.1s linear;
 }
 
-.about-text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.card-text {
     opacity: 0;
     width: 100%;
     color: white;
@@ -305,12 +306,28 @@ hr {
     font-size: 18px;
     text-align: center;
     position: absolute;
-    top: 35%;
+    top: 45%;
     left: 0;
     z-index: 2;
     transition: opacity 0.1s linear;
-    transform: translate3d(0, -50%. 0);
+    transform: translate3d(0, -50%, 0);
+}
+.card-info {
+    margin-top: 20px;
+    text-align: center;
+}
+.card-name{
+    font-size: 14px;
+    color: #333;
+    text-transform: uppercase;
+}
 
+.card-prof{
+    font-size: 15px;
+    font-style: italic;
+    font-family: 'Roboto', sans-serif;
+    color: #999999;
+    font-weight: 300;
 }
 
 /*statistics*/
@@ -558,15 +575,43 @@ hr {
     border-top: 2px solid #ccc;
     border-left: 2px solid #ccc;
 
-    
+
 }
 
-.reviews-btn__prev{
+.reviews-btn__prev {
     left: 0;
     transform: rotate(-45deg);
 }
 
-.reviews-btn__next{
+.reviews-btn__next {
     right: 0;
     transform: rotate(135deg);
+}
+
+/*social*/
+.social {
+    display: flex;
+    justify-content: center;
+}
+
+.social-item {
+    width: 55px;
+    height: 55px;
+    background-color: #fce38a;
+    border-right: 1px solid #f38181;
+    font-size: 35px;
+    text-decoration: none;
+    color: #f38181;
+    padding: 12px 10px;
+    line-height: 1;
+    transition: background 0.1s linear, color 0.1s linear;
+}
+
+.social-item:last-child {
+    border-right: 0;
+}
+
+.social-item:hover {
+    color: white;
+    background-color: #f38181;
 }
